Moved bridge configuration setup within the operator
Signed-off-by: Paolo Patierno <ppatierno@live.com>

Reverted back original operator Deployment
Set different bridge image for STs

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Fixed missing env vars to setup the truststore

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Removed ST using env vars not in place anymore

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Fixed checkstyle errors

Signed-off-by: Paolo Patierno <ppatierno@live.com>

CHANGELOG update

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Fixed updated systemtests bridge MD

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Fixed scholzj comments

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Factored out a dedicated withConfigProviders method for the bridge
configuration builder
Refactored bridge configuration builder to use isEquivalent

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Fixed tinaselenge comments

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Fixed checkstyle issues

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Fixed rolling bridge pod on configuration change

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Fixed scholzj and tinaselenge feedback

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Fixed KafkaBridgeAssemblyOperator tests about the missing new hash annotation

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Reverted back some deleted tests

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Adapted system tests to changes in configuration

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Fixed scholzj and fvaleri feedback

Signed-off-by: Paolo Patierno <ppatierno@live.com>